--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ cusdis:
 user:
   name: Dongmin Lee
   pic: /assets/img/cat.jpg
-  picAlt: "catbook"
+  picAlt: "Just Cat"
   job: Student
   aboutme: # true # comment this out if you don't need the 'about' page.
 
