--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ cusdis:
 
 user:
   name: Dongmin Lee
-  pic: /assets/img/cat.jpg
+  pic: /assets/img/ImSorry.jpg
   picAlt: "Just Cat"
   job: Student
   aboutme: # true # comment this out if you don't need the 'about' page.
